--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     	"socket.io": "0.9.10",
     	"underscore": "1.4.3",
     	"async": "0.1.22",
-    	"express-validator": "0.3.1"
+    	"express-validator": "0.3.1",
+    	"log4js": "0.5.6"
   	},
 	"devDependencies": {
 		"supervisor": ">= 0.4.1",
