--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     	"underscore": "1.4.3",
     	"async": "0.1.22",
     	"express-validator": "0.3.1",
-    	"log4js": "0.5.6"
+    	"log4js": "0.5.6",
+    	"forever": "0.10.0"
   	},
 	"devDependencies": {
 		"supervisor": ">= 0.4.1",
