--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
 	"name": "battle-board",
 	"description": "Tableau de bord pour les Battles de code",
-	"author": "Laurent Guerin <laurent.guerin@sopragroup.com>",
+	"author": "Laurent Guerin <laurent@dreamcat.fr>",
 	"version": "0.0.1",
 	"dependencies": {
 		"connect": "1.8.5",
     	"express": "3.0.0",
     	"express-hbs": "0.1.2-pre",
+	    "less": "1.3.2",
     	"less-middleware": "0.1.9",
     	"mongoose": "3.5.3",
     	"crypto": "0.0.3",
@@ -25,5 +26,5 @@
 		"mocha": "*",
 		"should": "*"
   	},
-	"engine": "node >= 0.8.0"
+	"engine": "node 0.8.18"
 }
