Mise a jour doc + default password

--- a/config/production.yaml
+++ b/config/production.yaml
@@ -4,7 +4,7 @@ app:
 db:
   url: "mongodb://localhost/battle"
 auth:
-  salt: "batte!98(-qsd#"
+  salt: "battle!98(-qsd#"
   default_admin_pass: "battle!2013"
 score:
   min: "-10"
