--- a/config/default.yaml
+++ b/config/default.yaml
@@ -5,7 +5,7 @@ db:
   url: "mongodb://localhost/battle"
 auth:
   salt: "batte!98(-qsd#"
-  default_admin_pass: "battle!2013"
+  default_admin_pass: "battle"
 score:
   min: "-10"
   max: 30
